# MyFirstLanguageFrontend

./: CMakeLists.txt  KaleidoscopeJIT.h  README.md  Warning.h  main.cpp
MyFirstLanguageFrontend/: main.cpp
klc/: klc.cpp
tests/: how to test.md
tests/NativeCompile/: testfib.cpp
